# algorand-reputation-system

./: README.md  Readme.md  deploy_config.py  package-lock.json  package.json  pyproject.toml  reputation-sbt.code-workspace
ARS/: .algokit.toml  ARS.code-workspace  README.md
ARS/.algokit/: .copier-answers.yml
ARS/.github/workflows/: ars-contracts-cd.yaml  ars-contracts-ci.yaml  ars-frontend-cd.yaml  ars-frontend-ci.yaml  release.yaml  validate.yaml
ARS/projects/ARS-backend/: .gitignore  ai_model.py  ipfs_utils.py  main.py  pyproject.toml  train_model.py
ARS/projects/ARS-contracts/: .algokit.toml  README.md  pyproject.toml
ARS/projects/ARS-frontend/: .algokit.toml  README.md  package-lock.json  package.json
attached_assets/: Pasted-Reputation-Scoring-System-with-AI-Soulbound-NFTs-Project-Overview-This-project-introduces-a-dec-1744313665832.txt
client/src/: App.tsx  index.css  main.tsx
client/src/components/: connect-wallet-button.tsx
client/src/hooks/: use-algo-wallet.tsx  use-reputation.ts
client/src/lib/: algo-wallet.ts  utils.ts  wallet-connect.ts
client/src/pages/: analytics.tsx  docs.tsx  (+4 more)
reputation-sbt-contracts/: .algokit.toml  README.md
reputation-sbt-contracts/.algokit/: .copier-answers.yml
reputation-sbt-frontend/: .algokit.toml  README.md  package-lock.json  package.json
reputation-sbt-frontend/.algokit/: .copier-answers.yml
server/: algorand.ts  routes.ts  storage.ts
server/ai/: advancedReputationModel.ts  reputationModel.ts
shared/: schema.ts
smart_contracts/sbt_contract/: .algokit.toml  deploy_config.py  sbt_contract.py
(+32 files in other folders)
